--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 .container {
     width: 1000px;
     margin: 0 auto;
@@ -21,6 +25,10 @@ a {
     color: white;
 }
 
+.color-violet {
+    color: rgb(112, 129, 194);
+}
+
 
 /* BACKGROUNDS */
 
@@ -29,28 +37,13 @@ a {
 }
 
 .bg-grey {
-    background-color: rgba(169, 169, 169, 0.578);
-}
-
-.bg-green {
-    background-color: green;
+    background-color: rgba(169, 169, 169, 0.449);
 }
 
 .bg-black {
-    background-color: rgba(0, 0, 0, 0.818);
+    background-color: rgb(34, 38, 41);
 }
 
-.bg-salmon {
-    background-color: salmon;
-}
-
-.bg-verde-bottiglia {
-    background-color: rgb(71, 173, 163);
-}
-
-.bg-aquamarine {
-    background-color: aquamarine;
-}
 
 /* BOTTONI (a) */
 
@@ -59,13 +52,26 @@ a {
     padding: 8px;
 }
 
-.btn-accedi, .btn-scarica {
+.btn-accedi,
+.btn-scarica1 {
     background-color: white;
     color: black;
 }
 
+.btn-scarica1 {
+    margin-right: 20px;
+}
+
 .btn-apri {
     background-color: black;
+}
+
+.btn-scarica2, .btn-registrati {
+    background-color: rgb(112, 129, 194);
+}
+
+.btn-header2 {
+    text-align: center;
 }
 
 
@@ -73,14 +79,13 @@ a {
 
 .header1 {
     align-items: center;
-    height: 50px;
+    height: 70px;
 }
 
 .navbar {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 30px;
 }
 
 .navbar-link {
@@ -107,13 +112,6 @@ a {
     margin: 20px;
 }
 
-.btn-header2 {
-    text-align: center;
-}
-
-.btn-scarica {
-    margin-right: 15px;
-}
 
 
 /* MAIN */
@@ -138,12 +136,17 @@ a {
 
 .main-sezione4 {
     align-items: center;
-    height: 550px;
+    text-align: center;
+    padding: 50px;
 }
 
-.green-section {
-    height: 500px;
-    width: 100%;
+.sfondo-stelle {
+    background-image: url('../imgs/stars.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 8px;
+    margin-bottom: 20px;
 }
 
 /* FOOTER */
@@ -152,23 +155,29 @@ a {
 
 .footer-sezione1 {
     align-items: flex-start;
-    height: 350px;
-    border-bottom: 2px solid white;
-    padding-top: 5px;
+    justify-content: space-between;
+    border-bottom: 2px solid rgb(112, 129, 194);
+    padding: 50px;
+    line-height: 40px;
 }
 
-.salmon-section {
-    height: 320px;
+
+.footer-sezione1-content {
     flex-basis: calc((100% / 12) * 4)
 }
 
-.verde-bottiglia-section {
-    height: 320px;
+.ita-img {
+    height: 15px;
+}
+
+
+.footer-sezione1-lista {
     flex-basis: calc((100% / 12) * 8)
 }
 
 .lista {
     width: 100%;
+    line-height: 40px;
 }
 
 .ul1,
@@ -176,7 +185,12 @@ a {
 .ul3,
 .ul4 {
     flex-basis: 25%;
-    border: 1px dashed white;
+    list-style: none;
+    color: white;
+}
+
+.title-list {
+    color:rgb(112, 129, 194);
 }
 
 /* Footer seconda sezione */
@@ -186,15 +200,8 @@ a {
     height: 80px;
 }
 
-.aquamarine-section {
+.footer-navbar {
     justify-content: space-between;
     align-items: center;
-    height: 60px;
-    width: 100%;
-}
-
-button {
-    font-size: 14px;
-    padding: 5px;
-    background-color: pink;
+    margin-bottom: 30px;
 }
